fixing button bug causing misalignments and widths not to work

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -391,7 +391,8 @@ body .editor-styles-wrapper,
 	display: block;
 }
 
-.c9-column-container>.c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block[data-type="c9-blocks/column"] .wp-block>[data-type="core/image"] {
+.c9-column-container>.c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block[data-type="c9-blocks/column"] .wp-block>[data-type="core/image"],
+.c9-column-container>.c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block[data-type="c9-blocks/column"] .wp-block>[data-type="core/buttons"] {
 	width: auto;
 }
 
